[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[metadata]
name = codesync
author = Nir Magnezi
author_email = nir.magnezi@gmail.com
summary = Sync git folders to or from a local directory and a remote machine
version = 0.1
description-file = README.md
license = Apache License, Version 2.0
classifier =
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    reqwise

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    codesync=codesync.codesync:main
